# givenergy-local-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  givenergy_exporter.py  prometheus.yml  systemd-service.example
givenegy-prometheus-exporter/: README.md  config.yaml  docker-compose.yml  pyproject.toml  systemd-service.example
givenergy-control-api/: Dockerfile  givenergy_control.py  pyproject.toml
givenergy-history/: backfill_openmetrics_parallel.sh  backfill_quarters.sh  convert_quarters_to_monthly_openmetrics.sh  convert_quarters_to_openmetrics.sh  export_givenergy_history.py  export_quarters.sh  json_to_openmetrics.py  verify_metric_name_alignment.py
givenergy-prometheus-exporter/: Dockerfile  GIVENERGY_REGISTER_MAP.md  README.md  docker-compose.yml  givenergy_exporter.py
grafana/dashboards/: givenergy-small.json  givenergy.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: prometheus.yaml
